# diseases

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  DEPLOY.md  Dockerfile  QUICKSTART.md  README.md  STAGING.md  fly.toml  justfile  package-lock.json  package.json  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements.txt  tailwind.config.js  vite.config.js
.github/workflows/: build-assets.yml  deploy.yml  ruff.yml  test.yml  update-coverage-badge.yml
app/: __init__.py  auth.py  config.py  database.py  dependencies.py  disease_mappings.py  main.py  models.py  nndss_loader.py  templates.py  utils.py
app/etl/: __init__.py  base.py  config.py  schema.py  storage.py
app/etl/normalizers/: __init__.py  disease_names.py  fips.py  geo.py  slugify.py
app/etl/transformers/: __init__.py  nndss.py  tracker.py
app/middleware/: __init__.py  auth.py
app/routers/: __init__.py  api.py  html_api.py  pages.py  sql_api.py
app/static/css/: custom.css
app/static/js/: age-group-chart.js  app.js  disease-state-trend-chart.js  national-disease-trend-chart.js  vendor.js
app/static/js/components/: map-legend.js  (+8 more)
app/templates/: base.html  disease.html  index.html
app/templates/partials/: age_group_chart.html  date_range_selector.html  disease_card.html  disease_cards.html  disease_stats.html  serotype_chart.html  state_selector.html  timeseries_chart.html  usa_map_chart.html
docs/: ETL.md  NNDSS_Instructions_031617.doc  data-decisions.md  dataflow.md  deploy.md
mcp_server/: __init__.py
tests/: conftest.py  test_api.py  test_database.py  test_nndss_loader.py  test_pages.py
tests/api/: test_auth_middleware.py  test_disease_endpoints.py  test_error_handling.py  test_health_endpoints.py  test_timeseries_endpoints.py
tests/etl/: __init__.py  test_config.py  test_etl_integration.py  test_nndss_transformer.py  test_normalizers.py  test_schema.py  test_tracker_transformer.py
tests/html/: __init__.py  test_html_fragments.py  test_page_rendering.py
(+9 files in other folders)
