[project]
name = "disease-dashboard"
version = "0.1.0"
description = "US Disease Tracker Dashboard - Data visualizations for disease surveillance"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Disease Dashboard Team" }
]
dependencies = [
    "fastapi[standard]==0.121.0",
    "uvicorn[standard]==0.34.0",
    "jinja2>=3.1.5",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=5.0.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "api: JSON API endpoint tests",
    "html: HTML fragment and page rendering tests",
    "etl: ETL pipeline tests",
    "integration: Full integration tests (ETL -> DuckDB -> API)",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
